Fix overflow on new post drawer

--- a/app/assets/stylesheets/00style.scss
+++ b/app/assets/stylesheets/00style.scss
@@ -599,7 +599,10 @@
 		width: inherit;
 		height: 0px;
 
-		padding: 10px 0 0 26px;
+		text-align: left;
+
+		padding: 10px 0 0 0;
+		margin-left: 10px;
 		color: #757575;
 		font-size: 14px;
 	}
